# GeoBED

./: .gitignore  GeoBED.yml  LICENSE  README.md  README.rst  __init__.py  environment_local_dev.yml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst  requirements.txt  tutorials.rst
docs/static/: custom.css
docs/templates/: module.rst
docs/tutorials/: Experimental Design for Interrogation Problems.ipynb  Nuisance Parameters.ipynb  eig_methods.ipynb  getting_started.ipynb  helpers.py
geobed/: __init__.py  core.py  design2data_helpers.py  eig.py  guides.py  optim.py  utils.py
geobed/discrete/: guides.py  optim.py
geobed/fwd_collection/: __init__.py  avo.py  pyprop2pytorch.py  raytracer.py  raytracer_improved.py
geoboed/: __init__.py
geoboed.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
geoboed/fwd_collection/: __init__.py  raytracer.py
geoboed/samplemode/: __init__.py  batched_legacy_collection.py  dataloader.py  dn.py  iterative_construction.py  nmc.py  samplemode.py  var_marg.py  var_nmc.py  var_post.py
geoboed/tests/: test_base.py
notebooks/: case2_data.hdf5  case3_data.hdf5  case4_data.hdf5  evidence_guide_test.ipynb  explain_design2data.ipynb  test_datastructure.ipynb  test_joblib.ipynb  test_simple_dn_bed.ipynb  tutorial_marginal_guides.ipynb
notebooks/continuous/: continous_OED_test.ipynb  mpl_stylesheet.mplstyle  test_shapely.ipynb
notebooks/data/: case3_data.hdf5  forward_model_data.h5  forward_model_data_interstation_design.h5  forward_model_data_multiple_phases.h5  (+1 more)
tests/: test_core.py
(+56 files in other folders)
