[metadata]
name = geobed
version = 0.0.1
author = Dominik Strutz
author_email = dominik.strutz@ed.ac.uk
description = GeoBED
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dominik-strutz/GeoBED/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    torch
    tqdm
    h5py
    matplotlib
    dill
    multiprocess
    mpire
    joblib
    zuko
[options.packages.find]
where = geobed
# [options.optional-dependencies]
# raytracing = pykonal, ttrpy, vtk
# pyprop8 = pyprop8
# full = segyio, seaborn, pykonal, ttrpy, vtk, pyprop8